--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
     <div></div>
     <a href="sgtmactavish.html">• Sgt. MacTavish</a>
     <div></div>
-    <a href="sgtgarrick.html">Sgt. Garrick</a>
+    <a href="sgtgarrick.html">• Sgt. Garrick</a>
     <div></div>
     <img src="https://ella.janitorai.com/bot-avatars/H_UHLIFHjQpcFvLLLMSpx.webp?width=1200">
 </body>
